Doc: explain structure.

--- a/share/doc/pages/install_and_getting_started.dox
+++ b/share/doc/pages/install_and_getting_started.dox
@@ -1,4 +1,4 @@
-/** @page install Install MLR and Getting Started
+/** @page page_getting_started Getting Started and Install MLR
 
 @note This does not represent the current install Feb. 2013
 @todo fix install instruction
