--- a/share/src/MLR.dox
+++ b/share/src/MLR.dox
@@ -1,7 +1,9 @@
 /**
 @mainpage MLR - Machine Learning and Robotics Lab
 
-The MLR project consists of lots of little libs that you can use and build your own program.
+The MLR project consists of lots of little libs that you can use and build your own program with simple make files.
+
+@note Feel free to add documentation!
 
 The documentation of the libs can be found under "Modules".
 Documentation which is not directly connected to the source code (like coding conventions, howtos, tutorials, etc.) is under "Related Pages"
@@ -56,15 +58,51 @@ Here is a overview of the mlr project structure:
 -# move packages that are useful and a coherent unit to share/PACKAGE. Everybody owns it.
 
 
+
 @section doxygen Documentation
 
-@todo add me
+We use Doxygen for our documentation (API and everything else).
+- Modules are defined and documented in @a *.dox files.
+  - A @a *.dox should contain a high level overview of the module.
+  - Everything that belongs to a module should be added to the group.
+  - The API documentation is then generated automatically.
+- Related Pages contain 'HOWTOs' and general tutorials.
+  - they are stored under share/doc/*.dox
+- Use existing modules/pages/etc as blueprint and have a look at:
+  - Doxygen Homepage: http://www.stack.nl/~dimitri/doxygen/
+  - Formulas in Doxygen: http://www.stack.nl/~dimitri/doxygen/manual/formulas.html
+
+
+
+@section jenkins Continuous Integration with Jenkins
+We're trying to make it easy to install the code and keep a it solid.
+Therefore we use a continuous integration server Jenkins which checks out the repository,
+builds it (with different settings), executes some tests,
+collects some statistics and writes angry emails when your commits broke the build.
+
+Here is the web interface:
+http://sully.informatik.uni-stuttgart.de:8080/
+
+If you want to you can add your own tests as well!
+
+More on Jenkins: http://jenkins-ci.org/
 
 
 
 @section misc Misc Guides
 
+@subsection misc_coding coding utilities
+mlr offers quite a few useful features:
+- STRING class
+- Parameter read from cmd line or config file
+- Plotting in opengl & gnuplot
+- opengl using freeglut, fltk or qt
+
+
+
 @subsection misc_hardware Guide to the robot hardware (Marc)
+This is for the Schunk arm in Berlin.
+
 - Startup hardware
   - turn on robot
   - mlrMountHardware
@@ -118,6 +156,7 @@ in our experience it proved more robust to try to fit shapes/contours
 in 2D first with as much accuracy as possible before triangulating.
 
 
+
 @subsection misc_optimization Optimization Methods (Marc)
 There are quite a bit of generic optimization methods implemented --
 but not well documented/organized yet. Ask Marc.
@@ -153,13 +192,6 @@ Machine Learning methods (as introduced in the ML lecture). Ask Marc.
 - libPRADA, a library for relational planning and rule learning: http://userpage.fu-berlin.de/tlang/prada/
 
 
-
-@subsection misc_coding coding utilities
-
-- String class
-- Parameters read from cmd line or config file
-- plotting in opengl & gnuplot
-- opengl using freeglut, fltk or qt
 
 
 */
