--- a/share/projects/the_cusious_robot/README
+++ b/share/projects/the_cusious_robot/README
@@ -3,15 +3,44 @@ The Curious Robot
 
 This is the implementation of "The Curious Robot" (TCR) project.
 
-NOTE: it's not running yet.
+NOTE: it's not running yet :(
 
-# Install
+
+# Prerequisites & Setup
 TODO complete this section and add links.
 
 TCR uses ROS and the MLR code.
 
-To use TCR do the following:
-- create a ros fuerte workspace
-- add a sandbox
+## Prerequisites
+
+- use Ubuntu 12.04
+- install libgsl0-dev to make it work
+
+    sudo apt-get install libgsl0-dev
+
+- install ros fuerte and additional packages:
+
+    sudo apt-get install ros-fuerte-desktop-full ros-fuerte-rqt
+
+  see http://www.ros.org/wiki/fuerte/Installation/Ubuntu
+- create a ros fuerte workspace in ~/fuerte_workspace and a sandbox directory
+  ~/fuerte_workspace/sandbox
+  see http://www.ros.org/wiki/ROS/Tutorials/InstallingandConfiguringROSEnvironment
+- install the ros articulation package by Sturm
+
+    rosws set alufr-ros-pkg --svn http://alufr-ros-pkg.googlecode.com/svn/trunk/
+
+- compile articulation
+
+    rosmake articulation
+
+
+## Setup
 - create a link from ~/git/mlr/share/projects/the_curious_robot/ to ~/fuerte_workspace/sandbox/the_curious_robot
 - add ~/fuerte_workspace/sandbox/the_curious_robot to the ros stack
+
+
+
+<!--
+vim: ft=markdown
+-->
