--- a/share/projects/the_curious_robot/TODO
+++ b/share/projects/the_curious_robot/TODO
@@ -4,6 +4,7 @@
 - learn limits
 - learn symbols for limits
 - learn properties of joints
+- plys are not serialized
 
 # DONE
 - orspy & physx @stefan
