--- a/share/src/Core/Core.dox
+++ b/share/src/Core/Core.dox
@@ -1,4 +1,4 @@
-/** @defgroup Core Array class, basic utilities, minimalistic dependences
+/** @defgroup group_Core Array class, basic utilities, minimalistic dependences
 
 @brief The Core group contains the basic Array class and utilities throughout. It has minimalistic dependencies (optional to LAPACK) and should easily compile everywhere.
 
